fix: increase header collapse breakpoint to 750px
Adjusted media query breakpoint from 600px to 750px to accommodate
the larger logo and site title font, preventing cramped header layout
before the hamburger menu appears.

--- a/assets/sass/_minima.scss
+++ b/assets/sass/_minima.scss
@@ -246,7 +246,7 @@ pre {
     }
   }
 
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 750px) {
     position: absolute;
     top: 9px;
     right: $spacing-unit / 2;
